tests/invalid/function/type_forall_fn_value_infer_unresolved.facet
fn keep<T>(x: affine isize) -> affine isize {
  x
}

fn main() -> affine isize {
  let f: unrestricted for<T> fn(affine isize) -> affine isize = keep in
  (f 1)
}
